Refine copy and roadmap text

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     .hero-text h1 { font-size: 2.5rem; font-weight: 600; margin-bottom: 1rem; }
     .hero-text p { font-size: 1.2rem; margin-bottom: 1.5rem; }
     .hero-img { flex: 1 1 380px; text-align: center; position: relative; }
-    .hero-img img { width: 100%; max-width: 600px; height: auto; border-radius: 1rem; box-shadow: 0 4px 24px rgba(0,0,0,0.08); }
+    .hero-img img { width: 100%; max-width: 650px; height: auto; border-radius: 1rem; box-shadow: 0 4px 24px rgba(0,0,0,0.08); }
     .section { padding: 4rem 0; }
     .how-steps { display: flex; flex-wrap: wrap; gap: 2rem; justify-content: space-between; }
     .step { flex: 1 1 280px; text-align: center; }
@@ -142,7 +142,7 @@
   <header class="container">
     <nav>
       <div class="flex items-center gap-2">
-        <img src="logo/logo.png" width="96" height="96" alt="Memory Mate logo" style="border-radius:50%; box-shadow:0 2px 8px rgba(76,175,80,0.06);">
+        <img src="logo/logo.png" width="120" height="120" alt="Memory Mate logo" style="border-radius:50%; box-shadow:0 2px 8px rgba(76,175,80,0.06);">
         <span style="color:#4CAF50;font-weight:600;font-size:1.4rem;">Memory Mate</span>
       </div>
       <button class="nav-toggle" aria-label="Menu" onclick="document.getElementById('main-menu').classList.toggle('open');">&#9776;</button>
@@ -158,7 +158,7 @@
     <section class="hero">
       <div class="hero-text">
         <h1>Your AI Second Brain—Instant Recall</h1>
-        <p class="lead">Save any reply from ChatGPT, Gemini, Claude or Perplexity in one click and find it again before your coffee cools. Enjoy a 10× boost now—100× once our roadmap lands.</p>
+        <p class="lead">Clip any reply from ChatGPT, Gemini, Claude or Perplexity in one tap and pull it back whenever you need. Enjoy a 10× boost today—100× once our roadmap lands.</p>
         <a href="#" class="btn-primary">Add to Chrome — Free Forever</a>
         <small>Zero forms. Data stored only locally.</small>
       </div>
@@ -168,14 +168,14 @@
     </section>
     <section class="pain-solution" style="text-align:center;padding:2rem 0;">
       <h2>Stop Endless Chat-Scrolling.</h2>
-      <p>Clip answers once—retrieve them in < 1 s, even weeks later.</p>
+      <p>Clip answers once—keep them ready to use as you see fit.</p>
     </section>
     <section id="how" class="section">
       <h2 style="font-size:1.8rem;font-weight:600;text-align:center;">How It Works</h2>
       <ol class="how-it-works" style="margin-top:2rem;list-style:none;padding:0;font-size:1.1rem;line-height:1.6;">
         <li><strong>Capture</strong> – Press the green icon on any answer.</li>
         <li><strong>Organise</strong> – Smart tags file it by project &amp; topic.</li>
-        <li><strong>Recall</strong> – Lightning search surfaces it in &lt; 1 s.</li>
+        <li><strong>Recall</strong> – Keep it and use as you see fit.</li>
       </ol>
     </section>
     
@@ -185,8 +185,8 @@
       <ul class="benefits" style="list-style:none;padding:0;margin-top:1rem;display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:1.5rem;">
         <li><i data-lucide="mouse-pointer-click" class="benefit-icon"></i><h3>Instant Clip</h3><p>Press once. The answer’s yours—forever.</p></li>
         <li><i data-lucide="tags" class="benefit-icon"></i><h3>Smart Tags</h3><p>No folders to juggle. We tag by topic for you.</p></li>
-        <li><i data-lucide="search" class="benefit-icon"></i><h3>Lightning Search</h3><p>Find any snippet in &lt; 1 s—no digging.</p></li>
-        <li><i data-lucide="shield" class="benefit-icon"></i><h3>Private Vault</h3><p>End-to-end encryption. Your data, your rules.</p></li>
+        <li><i data-lucide="search" class="benefit-icon"></i><h3>Lightning Search</h3><p>Keep it and use as you see fit.</p></li>
+        <li><i data-lucide="shield" class="benefit-icon"></i><h3>Private Vault</h3><p>Stored locally. Your data, your rules.</p></li>
       </ul>
       <h3 style="text-align:center;margin-top:2rem;">Bonus Wins</h3>
       <ul class="benefits" style="list-style:none;padding:0;margin-top:1rem;display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:1.5rem;">
@@ -217,10 +217,10 @@
 
         <h3 style="font-weight:600;margin-bottom:1rem;">Near-Term Roadmap (Next 90–120 Days)</h3>
         <ul class="list-check">
-          <li><i data-lucide="clock"></i><strong>Push to Notion / Obsidian / OneNote / Markdown</strong> – one click from any project keeps your PKM stack in sync.</li>
-          <li><i data-lucide="clock"></i><strong>Answer + Project Tags</strong> – lightweight metadata for rapid search and cross-cut views.</li>
-          <li><i data-lucide="clock"></i><strong>“Inject into prompt”</strong> – drop a saved clip or entire project straight into the chat box—no copy-paste gymnastics.</li>
-          <li><i data-lucide="clock"></i><strong>Built-in RAG assistant</strong> – get prompts rewritten with relevant snippets so every chatbot remembers your research.</li>
+          <li><i data-lucide="clock"></i><strong>Sync to Notion, Obsidian, OneNote or Markdown</strong> – one click keeps every project in sync with your PKM.</li>
+          <li><i data-lucide="clock"></i><strong>Answer & Project Tags</strong> – tags make every clip instantly searchable.</li>
+          <li><i data-lucide="clock"></i><strong>Inject into Prompt</strong> – drop saved clips into a chat with zero copy‑paste.</li>
+          <li><i data-lucide="clock"></i><strong>RAG-Powered Assistant</strong> – our AI surfaces the perfect snippet and rewrites your prompt for you.</li>
         </ul>
         <p style="margin-top:1.5rem;"><a href="#" class="btn-primary">Add to Chrome — Free Forever</a></p>
         <small class="microcopy">Zero forms. Data stored only locally.</small>
