Remove remaining Lightning Search reference

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <ul class="benefits" style="list-style:none;padding:0;margin-top:1rem;display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:1.5rem;">
         <li><i data-lucide="mouse-pointer-click" class="benefit-icon"></i><h3>Instant Clip</h3><p>Press once. The answer’s yours—forever.</p></li>
         <li><i data-lucide="tags" class="benefit-icon"></i><h3>Smart Tags</h3><p>No folders to juggle. We tag by topic for you.</p></li>
-        <li><i data-lucide="search" class="benefit-icon"></i><h3>Lightning Search</h3><p>Keep it and use as you see fit.</p></li>
+        <li><i data-lucide="search" class="benefit-icon"></i><h3>Quick Recall</h3><p>Keep it and use as you see fit.</p></li>
         <li><i data-lucide="shield" class="benefit-icon"></i><h3>Private Vault</h3><p>Stored locally. Your data, your rules.</p></li>
       </ul>
       <h3 style="text-align:center;margin-top:2rem;">Bonus Wins</h3>
