Style feature and roadmap cards

--- a/index.html
+++ b/index.html
@@ -181,31 +181,66 @@
     
     <section id="features" class="section">
       <h2 style="font-size:1.8rem;font-weight:600;text-align:center;">Why You’ll Love Memory Mate</h2>
-      <h3 style="text-align:center;margin-top:2rem;">Core Wins</h3>
-      <ul class="benefits" style="list-style:none;padding:0;margin-top:1rem;display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:1.5rem;">
-        <li><i data-lucide="mouse-pointer-click" class="benefit-icon"></i><h3>Instant Clip</h3><p>Press once. The answer’s yours—forever.</p></li>
-        <li><i data-lucide="tags" class="benefit-icon"></i><h3>Smart Tags</h3><p>No folders to juggle. We tag by topic for you.</p></li>
-        <li><i data-lucide="search" class="benefit-icon"></i><h3>Quick Recall</h3><p>Keep it and use as you see fit.</p></li>
-        <li><i data-lucide="shield" class="benefit-icon"></i><h3>Private Vault</h3><p>Stored locally. Your data, your rules.</p></li>
-      </ul>
-      <h3 style="text-align:center;margin-top:2rem;">Bonus Wins</h3>
-      <ul class="benefits" style="list-style:none;padding:0;margin-top:1rem;display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:1.5rem;">
-        <li><i data-lucide="globe" class="benefit-icon"></i><h3>Works Everywhere</h3><p>ChatGPT, Gemini, Claude &amp; more.</p></li>
-      </ul>
+      <div class="grid feature-grid gap-5" style="margin-top:2rem;">
+        <div class="card-feature fade-in fade-in-4">
+          <div class="icon-circle"><i data-lucide="mouse-pointer-click"></i></div>
+          <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Instant Clip</h4>
+          <p class="text-gray-600 text-base">Press once. The answer’s yours&mdash;forever.</p>
+        </div>
+        <div class="card-feature fade-in fade-in-5">
+          <div class="icon-circle"><i data-lucide="tags"></i></div>
+          <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Smart Tags</h4>
+          <p class="text-gray-600 text-base">No folders to juggle&mdash;we tag by topic for you.</p>
+        </div>
+        <div class="card-feature fade-in fade-in-4">
+          <div class="icon-circle"><i data-lucide="search"></i></div>
+          <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Quick Recall</h4>
+          <p class="text-gray-600 text-base">Find any snippet in seconds.</p>
+        </div>
+        <div class="card-feature fade-in fade-in-5">
+          <div class="icon-circle"><i data-lucide="shield"></i></div>
+          <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Private Vault</h4>
+          <p class="text-gray-600 text-base">Stored locally and fully encrypted.</p>
+        </div>
+        <div class="card-feature fade-in fade-in-4">
+          <div class="icon-circle"><i data-lucide="globe"></i></div>
+          <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Works Everywhere</h4>
+          <p class="text-gray-600 text-base">ChatGPT, Gemini, Claude &amp; more.</p>
+        </div>
+      </div>
       <section id="roadmap" class="roadmap" style="margin-top:3rem;text-align:center;">
         <div class="urgency" style="margin-top:0; margin-bottom:1.5rem;">
           <p><span class="flashing-dot"></span> 1 new install every 3 minutes — join before Pro pricing launches.</p>
         </div>
         <h3 style="font-weight:600;margin-bottom:1rem;">Live Now</h3>
-        <ul class="list-check">
-          <li><i data-lucide="check-circle"></i><strong>Capture answers from 4 web‑LLMs</strong> – Clip any reply from ChatGPT, Gemini, Claude, or Perplexity—only the gold, no full-page noise.</li>
-          <li><i data-lucide="check-circle"></i><strong>Organise in “Projects”</strong> – Pick a folder; every clip drops in sorted so research stays tidy.</li>
-          <li><i data-lucide="check-circle"></i><strong>Auto-source + timestamp</strong> – We save the URL and exact time so future-you knows where facts came from.</li>
-          <li><i data-lucide="check-circle"></i><strong>Import external files</strong> – Add TXT & HTML now; DOCX for Pro—consolidate scattered notes.</li>
-          <li><i data-lucide="check-circle"></i><strong>Export any project</strong> – Push to TXT/HTML now; DOCX for Pro—share or back up as needed.</li>
-        </ul>
-
-        <h3 style="font-weight:600;margin-bottom:1rem;">Day-to-Day Benefits</h3>
+        <div class="grid feature-grid gap-5">
+          <div class="card-feature">
+            <div class="icon-circle"><i data-lucide="check-circle"></i></div>
+            <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Capture answers from 4 web‑LLMs</h4>
+            <p class="text-gray-600 text-base">Clip any reply from ChatGPT, Gemini, Claude, or Perplexity—only the gold, no full-page noise.</p>
+          </div>
+          <div class="card-feature">
+            <div class="icon-circle"><i data-lucide="check-circle"></i></div>
+            <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Organise in “Projects”</h4>
+            <p class="text-gray-600 text-base">Pick a folder; every clip drops in sorted so research stays tidy.</p>
+          </div>
+          <div class="card-feature">
+            <div class="icon-circle"><i data-lucide="check-circle"></i></div>
+            <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Auto-source + timestamp</h4>
+            <p class="text-gray-600 text-base">We save the URL and exact time so future-you knows where facts came from.</p>
+          </div>
+          <div class="card-feature">
+            <div class="icon-circle"><i data-lucide="check-circle"></i></div>
+            <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Import external files</h4>
+            <p class="text-gray-600 text-base">Add TXT &amp; HTML now; DOCX for Pro—consolidate scattered notes.</p>
+          </div>
+          <div class="card-feature">
+            <div class="icon-circle"><i data-lucide="check-circle"></i></div>
+            <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Export any project</h4>
+            <p class="text-gray-600 text-base">Push to TXT/HTML now; DOCX for Pro—share or back up as needed.</p>
+          </div>
+        </div>
+        <h3 style="font-weight:600;margin:2rem 0 1rem;">Day-to-Day Benefits</h3>
         <ul class="list-check">
           <li><i data-lucide="check-circle"></i>Zero-friction capture—one click locks in just the part you need.</li>
           <li><i data-lucide="check-circle"></i>Reliable sourcing—built-in URL & timestamp keep citations honest.</li>
@@ -214,14 +249,29 @@
           <li><i data-lucide="check-circle"></i>Pro-tier convenience—Word support keeps Office-centric teammates in the loop.</li>
         </ul>
         <p style="font-size:0.95rem;color:#555;max-width:720px;margin:0 auto 2rem;">Micro-proof: users report cutting research time by 30–50% after the first week.</p>
-
         <h3 style="font-weight:600;margin-bottom:1rem;">Near-Term Roadmap (Next 90–120 Days)</h3>
-        <ul class="list-check">
-          <li><i data-lucide="clock"></i><strong>Sync to Notion, Obsidian, OneNote or Markdown</strong> – one click keeps every project in sync with your PKM.</li>
-          <li><i data-lucide="clock"></i><strong>Answer & Project Tags</strong> – tags make every clip instantly searchable.</li>
-          <li><i data-lucide="clock"></i><strong>Inject into Prompt</strong> – drop saved clips into a chat with zero copy‑paste.</li>
-          <li><i data-lucide="clock"></i><strong>RAG-Powered Assistant</strong> – our AI surfaces the perfect snippet and rewrites your prompt for you.</li>
-        </ul>
+        <div class="grid feature-grid gap-5">
+          <div class="card-feature">
+            <div class="icon-circle"><i data-lucide="clock"></i></div>
+            <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Sync to Notion, Obsidian, OneNote or Markdown</h4>
+            <p class="text-gray-600 text-base">One click keeps every project in sync with your PKM.</p>
+          </div>
+          <div class="card-feature">
+            <div class="icon-circle"><i data-lucide="clock"></i></div>
+            <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Answer &amp; Project Tags</h4>
+            <p class="text-gray-600 text-base">Tags make every clip instantly searchable.</p>
+          </div>
+          <div class="card-feature">
+            <div class="icon-circle"><i data-lucide="clock"></i></div>
+            <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Inject into Prompt</h4>
+            <p class="text-gray-600 text-base">Drop saved clips into a chat with zero copy‑paste.</p>
+          </div>
+          <div class="card-feature">
+            <div class="icon-circle"><i data-lucide="clock"></i></div>
+            <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">RAG-Powered Assistant</h4>
+            <p class="text-gray-600 text-base">Our AI surfaces the perfect snippet and rewrites your prompt for you.</p>
+          </div>
+        </div>
         <p style="margin-top:1.5rem;"><a href="#" class="btn-primary">Add to Chrome — Free Forever</a></p>
         <small class="microcopy">Zero forms. Data stored only locally.</small>
       </section>
