--- a/index.html
+++ b/index.html
@@ -65,7 +65,14 @@
     .hero-img img { width: 100%; max-width: 720px; height: auto; border-radius: 1rem; box-shadow: 0 4px 24px rgba(0,0,0,0.08); }
     .section { padding: 4rem 0; }
     .how-steps { display: flex; flex-wrap: wrap; gap: 2rem; justify-content: space-between; }
-    .step { flex: 1 1 280px; text-align: center; }
+    .step {
+      flex: 1 1 280px;
+      text-align: center;
+      cursor: pointer;
+      transition: transform 0.18s;
+    }
+    .step:hover { transform: translateY(-3px); }
+    .step:hover .icon-circle { background: #4CAF50; color: #fff; }
     .icon-circle {
       width: 48px; height: 48px;
       border-radius: 999px;
@@ -179,17 +186,37 @@
       <h2 style="font-size:1.8rem;font-weight:600;text-align:center;">How It Works</h2>
       <div class="how-steps" style="margin-top:2rem;">
         <div class="step">
-          <div class="icon-circle"><i data-lucide="save"></i></div>
+          <div class="icon-circle">
+            <svg width="34" height="34" viewBox="0 0 34 34" aria-hidden="true">
+              <ellipse cx="17" cy="17" rx="14" ry="13" fill="#fff" stroke="#4CAF50" stroke-width="2" />
+              <circle cx="17" cy="14" r="3" fill="#4CAF50" opacity="0.8" />
+              <rect x="22" y="7" width="6" height="8" rx="2" fill="#4CAF50" stroke="#45a049" stroke-width="1" />
+              <path d="M24 9V13L25.8 11.7L28 13V9" stroke="#fff" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </div>
           <h3>Capture</h3>
           <p>Press the green icon on any answer.</p>
         </div>
         <div class="step">
-          <div class="icon-circle"><i data-lucide="folder-open"></i></div>
+          <div class="icon-circle">
+            <svg width="34" height="34" viewBox="0 0 34 34" aria-hidden="true">
+              <rect x="6" y="13" width="22" height="14" rx="4" fill="#fff" stroke="#4CAF50" stroke-width="2" />
+              <rect x="10" y="8" width="8" height="8" rx="2" fill="#4CAF50" stroke="#45a049" stroke-width="1" />
+              <path d="M16 8l2.5 4" stroke="#45a049" stroke-width="1.2" />
+            </svg>
+          </div>
           <h3>Organise</h3>
           <p>Smart tags file it by project &amp; topic.</p>
         </div>
         <div class="step">
-          <div class="icon-circle"><i data-lucide="search"></i></div>
+          <div class="icon-circle">
+            <svg width="34" height="34" viewBox="0 0 34 34" aria-hidden="true">
+              <circle cx="17" cy="17" r="15" fill="#fff" stroke="#4CAF50" stroke-width="2" />
+              <path d="M17 22l3.5-6h-2.5l2-6-6 8h3l-2 4z" fill="#4CAF50" />
+              <circle cx="24" cy="24" r="5" fill="#e9faee" stroke="#45a049" stroke-width="1.2" />
+              <path d="M27 27l3 3" stroke="#4CAF50" stroke-width="2" stroke-linecap="round" />
+            </svg>
+          </div>
           <h3>Recall</h3>
           <p>Instant search resurfaces it in seconds.</p>
         </div>
