Move benefits list to features

--- a/index.html
+++ b/index.html
@@ -252,6 +252,15 @@
           <p class="text-gray-600 text-base">Captures ChatGPT, Gemini, Claude, Perplexity, and beyond.</p>
         </div>
       </div>
+      <h3 style="font-weight:600;margin:2rem 0 1rem;text-align:center;">Day-to-Day Benefits</h3>
+      <ul class="list-check">
+        <li><i data-lucide="check-circle"></i>Zero-friction capture—one click locks in just the part you need.</li>
+        <li><i data-lucide="check-circle"></i>Reliable sourcing—built-in URL & timestamp keep citations honest.</li>
+        <li><i data-lucide="check-circle"></i>Clean boundaries—clips land in the right project, never a dump pile.</li>
+        <li><i data-lucide="check-circle"></i>Easy in/out—import old notes, export polished reports without extra tools.</li>
+        <li><i data-lucide="check-circle"></i>Pro-tier convenience—Word support keeps Office-centric teammates in the loop.</li>
+      </ul>
+      <p style="font-size:0.95rem;color:#555;max-width:720px;margin:0 auto;">Micro-proof: users report cutting research time by 30–50% after the first week.</p>
       <section id="roadmap" class="roadmap" style="margin-top:3rem;text-align:center;">
         <div class="urgency" style="margin-top:0; margin-bottom:1.5rem;">
           <p><span class="flashing-dot"></span> 1 new install every 3 minutes — join before Pro pricing launches.</p>
@@ -284,15 +293,6 @@
             <p class="text-gray-600 text-base">Push to TXT/HTML now; DOCX for Pro—share or back up as needed.</p>
           </div>
         </div>
-        <h3 style="font-weight:600;margin:2rem 0 1rem;">Day-to-Day Benefits</h3>
-        <ul class="list-check">
-          <li><i data-lucide="check-circle"></i>Zero-friction capture—one click locks in just the part you need.</li>
-          <li><i data-lucide="check-circle"></i>Reliable sourcing—built-in URL & timestamp keep citations honest.</li>
-          <li><i data-lucide="check-circle"></i>Clean boundaries—clips land in the right project, never a dump pile.</li>
-          <li><i data-lucide="check-circle"></i>Easy in/out—import old notes, export polished reports without extra tools.</li>
-          <li><i data-lucide="check-circle"></i>Pro-tier convenience—Word support keeps Office-centric teammates in the loop.</li>
-        </ul>
-        <p style="font-size:0.95rem;color:#555;max-width:720px;margin:0 auto 2rem;">Micro-proof: users report cutting research time by 30–50% after the first week.</p>
         <h3 style="font-weight:600;margin-bottom:1rem;">Near-Term Roadmap (Next 90–120 Days)</h3>
         <div class="grid feature-grid gap-5">
           <div class="card-feature">
